# CmakeGoogleTests

./: CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
include/: IObservable.h  Input.h
src/: IObservable.cpp  Input.cpp  main.cpp
tests/: main.cpp
